feat: improve assistant memory